package org.itquasar.multiverse.jagrosk.persistence;

/**
 * Created by guilherme on 31/01/17.
 */
public interface JagroskPersistenceOptions {
    String JPA_PU_NAME = "jagrosk.provider.jpa.persistenceUnitName";
}
