package org.itquasar.multiverse.jagrosk.persistence;

/**
 * Created by guilherme on 31/01/17.
 */
public enum JagroskPersistenceType {
    MEMORY, JPA
}
