package org.itquasar.multiverse.jagrosk.persistence;

/**
 * Created by guilherme on 08/01/17.
 */
public interface JagroskPredicate {
}
